Refactor Xmodem class to streamline buffer processing and enhance transfer control logic